# xhs-autopilot

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  README_EN.md  pyproject.toml
.claude/skills/xhs-creator/: SKILL.md
scripts/: cover_template.html  generate_cover.py  screenshot_cover.py
