[project]
name = "xhs-autopilot"
version = "0.1.0"
description = "小红书内容创作自动驾驶 — 基于 Claude Code Skill 的 AI Agent 全流程自动化"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["xiaohongshu", "mcp", "claude-code", "ai-agent", "content-creation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "pillow>=12.1.1",
    "playwright>=1.58.0",
]

[project.urls]
Homepage = "https://github.com/Jinsong-Zhou/xhs-autopilot"
Repository = "https://github.com/Jinsong-Zhou/xhs-autopilot"
Issues = "https://github.com/Jinsong-Zhou/xhs-autopilot/issues"
